some minor tweaks

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Clyde - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Enock Agwera</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -23,7 +23,7 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Clyde<span>.</span></a>
+			<a class="navbar-brand" href="index.html">Agwera<span>.</span></a>
 			<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
@@ -47,15 +47,16 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/bg_1.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/agwera1.JPG);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
-								<span class="subheading">Hello! This is Clyde</span>
+								<span class="subheading">Hello! This is Enock Agwera</span>
 								<h1 class="mb-4 mt-3">Creative <span>UI/UX</span> Designer &amp; Developer</h1>
-								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<p><a href="#" class="btn btn-primary">Hire me</a> 
+								</p>
 							</div>
 						</div>
 					</div>
@@ -66,15 +67,17 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/bg_2.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/agwero.jpg);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
 						<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
-								<span class="subheading">We Design &amp; Build Brands</span>
-								<h1 class="mb-4 mt-3">Hi, I am <span>Clyde</span> This is my favorite work.</h1>
-								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<span class="subheading">I Design &amp; Build Brands</span>
+								<h1 class="mb-4 mt-3">Hi, I am <span>Agwera</span> I design websites</h1>
+								<p><a href="#" class="btn btn-primary">Hire me</a>
+									
+								</p>
 							</div>
 						</div>
 					</div>
@@ -92,7 +95,7 @@
 							<span class="flaticon-suitcase"></span>
 						</div>
 						<div class="text">
-							<strong class="number" data-number="750">0</strong>
+							<strong class="number" data-number="25">0</strong>
 							<span>Project Complete</span>
 						</div>
 					</div>
@@ -103,7 +106,7 @@
 							<span class="flaticon-loyalty"></span>
 						</div>
 						<div class="text">
-							<strong class="number" data-number="568">0</strong>
+							<strong class="number" data-number="40">0</strong>
 							<span>Happy Clients</span>
 						</div>
 					</div>
@@ -114,7 +117,7 @@
 							<span class="flaticon-coffee"></span>
 						</div>
 						<div class="text">
-							<strong class="number" data-number="478">0</strong>
+							<strong class="number" data-number="208">0</strong>
 							<span>Cups of coffee</span>
 						</div>
 					</div>
@@ -125,7 +128,7 @@
 							<span class="flaticon-calendar"></span>
 						</div>
 						<div class="text">
-							<strong class="number" data-number="780">0</strong>
+							<strong class="number" data-number="2">0</strong>
 							<span>Years experienced</span>
 						</div>
 					</div>
@@ -140,7 +143,7 @@
 				<div class="col-md-6 col-lg-5 d-flex">
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
-						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about-1.jpg);">
+						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/animation4.gif);">
 						</div>
 					</div>
 				</div>
@@ -153,7 +156,7 @@
 								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Name:</span> <span>Clyde Nowitzki</span></li>
+									<li class="d-flex"><span>Name:</span> <span>Agwera Nowitzki</span></li>
 									<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1990</span></li>
 									<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
 									<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
