--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 					</div>
 				</div>
 				<div class="col-md-4 col-lg-4 d-flex align-items-end">
-					<img src="images/author.png" class="img-fluid" alt="">
+					<img src="images/agwero.jpg" class="img-fluid" alt="">
 				</div>
 			</div>
 		</div>
