--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/agwera1.JPG);">
+						<div class="one-third order-md-last img" style="background-image:url(images/agwera2-min.JPG);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
@@ -66,7 +66,7 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/agwero.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/agwero-min.jpg);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
@@ -401,8 +401,8 @@
 						<p class="mb-0"><a href="#" class="btn btn-white py-3 px-4">Contact me</a></p>
 					</div>
 				</div>
-				<div class="col-md-4 col-lg-4 d-flex align-items-end">
-					<img src="images/agwero.jpg" class="img-fluid" alt="">
+				<div class="col-md-4 col-lg-4 d-flex align-items-end" style="margin-right: -150px;">
+					<img height="100%" src="images/animation5.gif" class="img" alt="">
 				</div>
 			</div>
 		</div>
