--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/agwera2-min.JPG);">
+						<div class="one-third order-md-last img" style="background-image:url(images/agwera2-min.jp2);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
@@ -66,7 +66,7 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/agwero-min.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/agwero-min.jp2);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
@@ -202,7 +202,7 @@
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<span class="subheading">Skills</span>
 					<h2 class="mb-4">My Skills</h2>
-					>
+					
 				</div>
 			</div>
 			<div class="row progress-circle mb-5">
