--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 				<div class="col-md-12 heading-section heading-section-white text-center ftco-animate">
 					<span class="subheading">Testimonials</span>
 					<h2 class="mb-4">What clients says about me?</h2>
-					<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
+					
 				</div>
 			</div>
 			<div class="row ftco-animate">
@@ -589,8 +589,8 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
-
+	</section>
+ -->
 
 
 	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
